# combo_arb

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LIVE.md  MCP.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
config/: config.example.yaml
data/sample/: frames.jsonl
scripts/: probe_combo_price.py  redeploy.sh
src/combo_arb/: __init__.py  cli.py  config.py  mcp_server.py  models.py
src/combo_arb/backtest/: __init__.py  replay.py
src/combo_arb/execution/: __init__.py  base.py  fill_sim.py  live.py  paper.py  settlement.py
src/combo_arb/kalshi/: __init__.py  auth.py  base.py  client.py  mock_client.py
src/combo_arb/monitoring/: __init__.py  queries.py
src/combo_arb/orchestration/: __init__.py  controller.py  settle.py
src/combo_arb/persistence/: __init__.py  db.py
src/combo_arb/pricing/: __init__.py  fees.py  model.py
src/combo_arb/risk/: __init__.py  risk.py
src/combo_arb/scanner/: __init__.py  scanner.py
src/combo_arb/telemetry/: __init__.py  metrics.py
tests/: conftest.py  test_auth.py  test_client.py  test_discovery.py  test_evaluations.py  test_fees.py  test_live_execution.py  test_live_guard.py  test_monitoring.py  test_paper_execution.py  test_pricing.py  test_replay.py  test_risk.py  test_scanner.py
