[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combo-arb"
version = "0.1.0"
description = "Kalshi combo (multivariate event) arbitrage scanner and paper-trading engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "combo_arb" }]
dependencies = [
    "httpx>=0.27",
    "cryptography>=41",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
mcp = [
    "mcp>=1.2",
]

[project.scripts]
combo-arb = "combo_arb.cli:app"
combo-arb-mcp = "combo_arb.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["combo_arb"]
